# teleport

./: .gitignore  README.md  TEST_LOG.md  catalog.json  mcp-knowledge.json
counter/: README.md  deno.json  main.ts
meta-skill/: SKILL.md
setup/: README.md  _uxdemo-cleanup.py  _uxdemo-inject.py  install.sh  pyproject.toml  requirements.txt  teleport_setup.py
skills/cloudflare/: SKILL.md
skills/discord/: SKILL.md
skills/exa/: SKILL.md
skills/figma/: SKILL.md
skills/github/: SKILL.md
skills/jira/: SKILL.md
skills/lemonsqueezy/: SKILL.md
skills/linear/: SKILL.md
skills/n8n/: SKILL.md
skills/netlify/: SKILL.md
skills/notion/: SKILL.md
skills/posthog/: SKILL.md
skills/railway/: SKILL.md
skills/resend/: SKILL.md
skills/sentry/: SKILL.md
skills/slack/: SKILL.md
skills/stripe/: SKILL.md
skills/supabase/: SKILL.md
skills/vercel/: SKILL.md
tests/: test_telemetry.py
tools/: stats.py
